--- a/src/frontend/App.css
+++ b/src/frontend/App.css
@@ -1,80 +1,98 @@
-.App{
+.App {
   margin: auto;
 }
-.App a{
+
+.App a {
   text-decoration: none;
   color: black;
 }
-.img-logo2{
+
+.img-logo2 {
   margin-top: 15px;
   width: 30px;
   height: 30px;
   margin-left: 10px;
 }
-.nav{
+
+.nav {
   flex: auto;
   display: flex;
 }
-.logo{
+
+.logo {
   display: flex;
   margin-bottom: 30px;
 }
-.img-logo{
+
+.img-logo {
   margin-left: 20px;
   width: 80px;
 }
-.navbar{
+
+.navbar {
   width: 1000px;
   margin-left: 300px;
 }
-.hi{
+
+.hi {
   display: flex;
   margin-left: 1280px;
   flex: 1 1 1;
 }
-.a{
+
+.a {
   height: 25px;
   margin-top: 20px;
   margin-right: 5px;
 }
-.b{
+
+.b {
   margin-top: 21px;
   margin-left: 5px;
 }
-.h4-navbar{
+
+.h4-navbar {
   margin-top: 15px;
 }
-.d-block-w-100{
+
+.d-block-w-100 {
   width: 1600px;
 }
-.slide{
+
+.slide {
   width: 1600px;
 }
-.footer{
+
+.footer {
   margin-top: 30px;
-  
+
   flex: 1 1 1;
   display: flex;
   background-color: black;
   border-radius: 5px;
 }
-.img-footer{
+
+.img-footer {
   width: 40px;
   margin-right: 8px;
   margin-top: 10px;
 }
-.footer-1{
+
+.footer-1 {
   margin-top: 50px;
   margin-left: 10px;
 }
-.footer-2{
+
+.footer-2 {
   margin-left: 300px;
   margin-top: 15px;
 }
-.h3-content{
+
+.h3-content {
   text-align: center;
 }
-.content-2-2{
+
+.content-2-2 {
   width: 1600px;
   gap: 50px;
   display: flex;
@@ -82,25 +100,57 @@
   margin-bottom: 10px;
   margin-left: 150px;
 }
-.content{
+
+.content {
   width: 1600px;
   margin: auto;
   margin-top: 20px;
 }
-.footer-3{
-margin-left: 350px;
-margin-top: 10px;
+
+.footer-3 {
+  margin-left: 350px;
+  margin-top: 10px;
 }
-.hii{
+
+.hii {
   border-radius: 5px;
 }
-.icon1{
+
+.icon1 {
   margin-left: 55px;
 }
-.text-price{
+
+.text-price {
   margin-left: 120px;
   font-weight: bold;
 }
-.text-content{
+
+.text-content {
   padding-top: 10px;
+}
+
+.product {
+  display: flex;
+  margin: auto;
+  gap: 30px;
+  margin-top: 30px;
+}
+.product1{
+ max-width: 400px;
+ margin-left: 20px;
+ margin-top: 45px;
+}
+
+.img-search {
+  width: 60px;
+  margin-left:5px;
+}
+.search {
+
+}
+.content1{
+  display: flex;
+  gap:10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
